<resources>
    <string name="app_name">Shopping List</string>
    <string name="action_clear_list">Clear list</string>
    <string name="action_go_shopping">Go shopping</string>
    <string name="action_favorites">Add to favorites</string>
    <string name="action_share_list">Share list</string>
    <string name="action_sortAbc">Sort alphabetically</string>
    <string name="action_sortCategory">Sort per category</string>
    <string name="action_sortManual">Sort manually</string>
    <string name="drawer_about">About, terms and privacy</string>
    <string name="drawer_account">My account</string>
    <string name="drawer_feedback">Give feedback</string>
    <string name="drawer_help" translatable="false">Help</string>
    <string name="drawer_list">My shopping list</string>
    <string name="drawer_recipe">My recipes</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_shops">Shops</string>
    <string name="mailto" translatable="false">mailto:</string>
    <string name="email" translatable="false">veronique.wuyts@student.thomasmore.be</string>
    <string name="email_subject">Feedback Shopping List</string>
    <string name="pref_group_notification">Notifications</string>
    <string name="pref_group_notification_key" translatable="false">notifications</string>
    <string name="pref_key_notification_on" translatable="false">notification_on</string>
    <string name="pref_title_notification_on">Receive notifications</string>
    <string name="pref_sum_notification_on">Receive weekly new tips and promotions</string>
    <string name="pref_sum_notification_off">Do not receive weekly new tips and promotions</string>
    <string name="pref_toast_notification_on">You will now receive weekly new tips and promotions</string>
    <string name="pref_toast_notification_off">You will not receive new tips and promotions</string>
    <string name="pref_key_notifications_how" translatable="false">notification_how</string>
    <string name="pref_title_notifications_how">Receive notifications by</string>
    <string name="pref_toast_notifications_how">You will receive tips and promotions via </string>
    <string name="pref_entry_email" translatable="false">E-mail</string>
    <string name="pref_entry_twitter" translatable="false">Twitter</string>
    <string name="pref_entry_whats_app" translatable="false">WhatsApp</string>
    <string name="pref_entry_messenger" translatable="false">Messenger</string>
    <string name="pref_entry_sms">Text message</string>
    <string name="pref_email" translatable="false">email</string>
    <string name="pref_twitter" translatable="false">twitter</string>
    <string name="pref_whats_app" translatable="false">whatsApp</string>
    <string name="pref_messenger" translatable="false">messenger</string>
    <string name="pref_sms" translatable="false">sms</string>
    <string name="pref_group_option">Options</string>
    <string name="pref_group_option_key" translatable="false">options</string>
    <string name="pref_key_lock" translatable="false">screen_lock</string>
    <string name="pref_title_lock">Keep screen active</string>
    <string name="pref_sum_lock_on">Keep the screen active during shopping</string>
    <string name="pref_sum_lock_off">Do not keep the screen active during shopping</string>
    <string name="item_image">Product picture</string>
    <string name="promotion_image">Promotion flag</string>
    <string name="shop_image">Shop logo</string>
    <string name="placeholder_note" translatable="false">units - note</string>
    <string name="placeholder_name" translatable="false">Item name</string>
    <string name="placeholder_category" translatable="false">Item category</string>
    <string name="placeholder_amount">Amount</string>
    <string name="placeholder_note_only">Note …</string>
    <string name="empty_list">Your shopping list is empty</string>
    <string name="add_product">Add a product to your list</string>
    <string name="favorites">Favorites</string>
    <string name="catalogue">Catalogue</string>
    <string name="search">Search product</string>
    <string name="empty_favorites">You don\'t have any products marked as favorite</string>
    <string name="plus" translatable="false">Plus</string>
    <string name="not_implemented">This feature is not yet implemented</string>
    <string name="menu_edit_item">Edit item</string>
    <string name="shop">Shop:</string>
    <string name="cb_shop">Always this shop</string>
    <string name="cb_promotion">Is in promotion</string>
    <string name="btn_remove">Delete</string>
    <string name="btn_done">Done</string>
    <string name="shop_null">Select shop</string>
    <string name="shop_ah" translatable="false">Albert Heijn</string>
    <string name="shop_aldi" translatable="false">Aldi</string>
    <string name="shop_bio_planet" translatable="false">Bio-Planet</string>
    <string name="shop_carrefour" translatable="false">Carrefour</string>
    <string name="shop_colruyt" translatable="false">Colruyt</string>
    <string name="shop_delhaize" translatable="false">Delhaize</string>
    <string name="shop_lidl" translatable="false">Lidl</string>
    <string name="shop_okay" translatable="false">Okay</string>
    <string name="shop_spar" translatable="false">Spar</string>
    <string name="cat_fruit" translatable="false">Fruit</string>
    <string name="cat_vegetables">Vegetables</string>
    <string name="cat_meat">Meat</string>
    <string name="cat_fish">Fish</string>
    <string name="cat_cheese">Cheese</string>
    <string name="cat_dairy">Dairy</string>
    <string name="cat_pasta">Pasta-Grains</string>
    <string name="cat_breakfast">Breakfast</string>
    <string name="cat_bakery">Bakery</string>
    <string name="cat_spices">Spices</string>
    <string name="cat_canned">Canned food</string>
    <string name="cat_sauces">Sauces</string>
    <string name="cat_frozen">Frozen food</string>
    <string name="unit_g">g</string>
    <string name="unit_kg">kg</string>
    <string name="unit_piece">Piece</string>
    <string name="unit_bag">Bag</string>
    <string name="unit_box">Box</string>
    <string name="unit_jar">Jar</string>
    <string name="unit_bunch">Bunch</string>
    <string name="unit_bundle">Bundle</string>
    <string name="unit_crate">Crate</string>
    <string name="unit_tray">Tray</string>
    <string name="list_default">My shopping list</string>
    <string name="item_fruit_bananas">Bananas</string>
    <string name="item_fruit_apples">Apples</string>
    <string name="item_fruit_pears">Pears</string>
    <string name="item_fruit_grapes">Grapes</string>
    <string name="item_fruit_plums">Plums</string>
    <string name="item_fruit_lemon">Lemon</string>
    <string name="item_fruit_orange">Orange</string>
    <string name="item_fruit_pineapple">Pineapple</string>
    <string name="item_fruit_peaches">Peaches</string>
    <string name="item_fruit_nectarines">Nectarines</string>
    <string name="item_fruit_apricots">Apricots</string>
    <string name="item_fruit_cherries">Cherries</string>
    <string name="item_fruit_mandarins">Mandarins</string>
    <string name="item_fruit_clementines">Clementines</string>
    <string name="item_fruit_lime">Lime</string>
    <string name="item_fruit_grapefruit">Grapefruit</string>
    <string name="item_fruit_gooseberries">Gooseberries</string>
    <string name="item_fruit_raspberries">Raspberries</string>
    <string name="item_fruit_blueberries">Blueberries</string>
    <string name="item_fruit_kiwi">Kiwi</string>
    <string name="item_veg_lettuce">Lettuce</string>
    <string name="item_veg_tomatoes">Tomatoes</string>
    <string name="item_veg_onions">Onions</string>
    <string name="item_veg_carrots">Carrots</string>
    <string name="item_veg_avocado" translatable="false">Avocado</string>
    <string name="item_veg_mushrooms">Mushrooms</string>
    <string name="item_veg_spinach">Spinach</string>
    <string name="item_veg_fennel">Fennel</string>
    <string name="item_veg_kohlrabi">Kohlrabi</string>
    <string name="item_veg_potatoes">Potatoes</string>
    <string name="item_veg_aubergine" translatable="false">Aubergine</string>
    <string name="item_veg_courgette" translatable="false">Courgette</string>
    <string name="item_veg_cucumber">Cucumber</string>
    <string name="item_veg_garlic">Garlic</string>
    <string name="item_veg_leek">Leek</string>
    <string name="item_veg_radish">Radish</string>
    <string name="item_veg_beetroot">Beetroot</string>
    <string name="item_veg_corn">Corn</string>
    <string name="item_veg_pumpkin">Pumpkin</string>
    <string name="item_veg_pepper">Pepper</string>
    <string name="item_veg_y_pepper">Yellow pepper</string>
    <string name="item_veg_g_pepper">Green pepper</string>
    <string name="item_veg_r_pepper">Red pepper</string>
    <string name="item_veg_asparagus">Asparagus</string>
    <string name="item_veg_g_asparagus">Green asparagus</string>
    <string name="item_veg_celery">Celery</string>
    <string name="item_veg_w_celery">White celery</string>
    <string name="item_veg_g_celery">Green celery</string>
    <string name="item_meat_steak">Steak</string>
    <string name="item_meat_p_steak">Pork steak</string>
    <string name="item_meat_p_chop">Pork chop</string>
    <string name="item_meat_v_steak">Veal steak</string>
    <string name="item_meat_c_breast">Chicken breast</string>
    <string name="item_meat_c_leg">Chicken leg</string>
    <string name="item_meat_l_rack">Lamb rack</string>
    <string name="item_meat_l_cutlet">Lamb cutlet</string>
    <string name="item_meat_rabbit">Rabbit</string>
    <string name="item_meat_h_steak">Horse steak</string>
    <string name="item_meat_t_breast">Turkey breast</string>
    <string name="item_meat_minced">Minced meat</string>
    <string name="item_meat_d_breast">Duck breast</string>
    <string name="item_meat_escalope">Escalope ham cheese</string>
    <string name="item_meat_sausage">Sausage</string>
    <string name="item_meat_chipolata" translatable="false">Chipolata</string>
    <string name="item_meat_c_sausage">Chicken sausage</string>
    <string name="item_meat_cutlet">Cutlet</string>
    <string name="item_meat_v_cutlet">Veal cutlet</string>
    <string name="item_meat_c_cutlet">Chicken cutlet</string>
    <string name="item_meat_satay">Satay</string>
    <string name="item_fish_cod">Cod</string>
    <string name="item_fish_bass">Bass</string>
    <string name="item_fish_mackerel">Mackerel</string>
    <string name="item_fish_s_mackerel">Smoked mackerel</string>
    <string name="item_fish_salmon">Salmon</string>
    <string name="item_fish_s_salmon">Smoked salmon</string>
    <string name="item_fish_trout">Trout</string>
    <string name="item_fish_sole">Sole</string>
    <string name="item_fish_y_herring">Young herring</string>
    <string name="item_fish_tuna">Tuna</string>
    <string name="item_fish_ray">Ray</string>
    <string name="item_fish_shrimps">Shrimps</string>
    <string name="item_fish_lobster">Lobster</string>
    <string name="item_fish_mussels">Mussels</string>
    <string name="item_fish_oysters">Oysters</string>
    <string name="item_fish_wolf">Wolf fish</string>
    <string name="item_fish_herring">Herring</string>
    <string name="item_fish_bream">Bream</string>
    <string name="item_fish_plaice">Plaice</string>
    <string name="item_cheese_slices">Cheese slices</string>
    <string name="item_cheese">Cheese</string>
    <string name="item_cheese_m_slices">Mature cheese slices</string>
    <string name="item_cheese_mature">Mature cheese</string>
    <string name="item_cheese_em_slices">Extra mature cheese slices</string>
    <string name="item_cheese_e_mature">Extra mature cheese</string>
    <string name="item_cheese_goat">Goat cheese</string>
    <string name="item_cheese_herb">Herb cheese</string>
    <string name="item_cheese_spread">Cheese spread</string>
    <string name="item_cheese_grated">Grated cheese</string>
</resources>