<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/drawer_list"
        android:title="@string/drawer_list"
        android:icon="@drawable/ic_format_list" />
    <item
        android:id="@+id/drawer_recipe"
        android:title="@string/drawer_recipe"
        android:icon="@drawable/ic_local_dining" />
    <item
        android:id="@+id/drawer_shops"
        android:title="@string/drawer_shops"
        android:icon="@drawable/ic_location_on" />
    <item
        android:id="@+id/drawer_settings"
        android:title="@string/drawer_settings"
        android:icon="@drawable/ic_settings" />
    <item
        android:id="@+id/drawer_feedback"
        android:title="@string/drawer_feedback"
        android:icon="@drawable/ic_feedback" />
    <item
        android:id="@+id/drawer_help"
        android:title="@string/drawer_help"
        android:icon="@drawable/ic_help" />
    <item
        android:id="@+id/drawer_about"
        android:title="@string/drawer_about"
        android:icon="@drawable/ic_info" />
</menu>