<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/padding_default"
    android:paddingLeft="@dimen/padding_default"
    android:paddingEnd="@dimen/padding_default"
    android:paddingRight="@dimen/padding_default">

    <ImageView
        android:id="@+id/iv_edit_item"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:contentDescription="@string/item_image"
        android:onClick="getPicture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_name_edit_item"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_side"
        android:layout_marginLeft="@dimen/margin_side"
        android:text="@string/placeholder_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintTop_toTopOf="@+id/iv_edit_item"
        app:layout_constraintLeft_toRightOf="@+id/iv_edit_item"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_category_edit_item"/>
    <TextView
        android:id="@+id/tv_category_edit_item"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_category"
        app:layout_constraintLeft_toRightOf="@id/iv_edit_item"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/iv_edit_item" />
    <EditText
        android:id="@+id/et_amount_edit_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_default"
        android:paddingBottom="@dimen/padding_default"
        android:hint="@string/placeholder_amount"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/iv_edit_item"
        app:layout_constraintLeft_toLeftOf="parent" />
    <Spinner
        android:id="@+id/sp_unit_edit_item"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_default"
        android:paddingBottom="@dimen/padding_default"
        app:layout_constraintLeft_toRightOf="@id/et_amount_edit_item"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_amount_edit_item"
        app:layout_constraintBottom_toBottomOf="@id/et_amount_edit_item" />
    <EditText
        android:id="@+id/et_note_edit_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_default"
        android:paddingBottom="@dimen/padding_default"
        android:hint="@string/placeholder_note_only"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/et_amount_edit_item"
        app:layout_constraintLeft_toLeftOf="parent"/>
</android.support.constraint.ConstraintLayout>