<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_fav_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_default"
        android:paddingLeft="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_default"
        android:paddingRight="@dimen/padding_default"
        android:src="@drawable/bananas"
        android:contentDescription="@string/item_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_fav_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <TextView
        android:id="@+id/tv_fav_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_name"
        app:layout_constraintLeft_toRightOf="@id/iv_fav_item"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
    <ImageView
        android:id="@+id/iv_fav_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_delhaize"
        android:contentDescription="@string/shop_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <View style="@style/Divider" />
</android.support.constraint.ConstraintLayout>